# liquid-audio-nets

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AUTONOMOUS_SDLC_COMPLETION_FINAL.md  AUTONOMOUS_SDLC_COMPLETION_FINAL_TERRAGON.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_COMPLETION.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_RESEARCH_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPREHENSIVE_BENCHMARK_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.dev  Dockerfile.docs  Dockerfile.test  FINAL_AUTONOMOUS_SDLC_SUCCESS_REPORT.md  Makefile  NOVEL_ALGORITHMS_REPORT.md  PROJECT_CHARTER.md  README.md  RESEARCH_METHODOLOGY.md  RESEARCH_VALIDATION_REPORT.md  SDLC_IMPLEMENTATION.md  SECURITY.md  TERRAGON_EXECUTION_REPORT.md  academic_publication_preparation.py  advanced_scaling_system.py  autonomous_evolutionary_nas.py  autonomous_intelligence_system.py  autonomous_research_validation.py  (+54 more)
.devcontainer/: devcontainer.json  post-create.sh  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  embedded_support.yml  feature_request.yml  performance_issue.yml
.terragon/: config.yaml  discovered-items.json  value-metrics.json
deployment/kubernetes/: research-deployment.yaml
docker/: Dockerfile.research  docker-compose.research.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  MONITORING.md  PERFORMANCE.md  RESEARCH_FRAMEWORK.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 0001-liquid-neural-networks-for-audio.md  README.md  template.md
docs/guides/: README.md
docs/workflows/: ADVANCED_WORKFLOWS.md  README.md  WORKFLOW_SETUP.md
docs/workflows/examples/: cd.yml  ci.yml  dependency-update.yml  security-scan.yml
examples/: basic_keyword_spotting.py  embedded_simulation.py  real_time_processing.py  research_demo.py  rust_basic_demo.rs  simple_rust_test.rs
monitoring/: README.md  alertmanager.yml  docker-compose.monitoring.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: default.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/otel/: collector.yml
monitoring/rules/: alerts.yml
publication_package/: SUBMISSION_CHECKLIST.md  publication_metadata.json
publication_package/paper/: main.tex
publication_package/paper/sections/: bibliography.tex  mathematical_framework.tex  methodology.tex  related_work.tex
publication_package/reproducibility/: Dockerfile  README_REPRODUCIBILITY.md  reproduce_paper_results.py  requirements.txt
python/liquid_audio_nets/: __init__.py  lnn.py  performance_optimization.py  power_optimization.py  training.py  validation.py
python/liquid_audio_nets/research/: __init__.py  comparative_study.py  experimental_framework.py  multi_objective.py  neuromorphic_spike_learning.py  publication_generator.py  quantum_attention_mechanism.py  self_evolving_nas.py  statistical_validation.py  temporal_coherence_algorithm.py
python/liquid_audio_nets/tools/: __init__.py  compression.py  profiler.py
scripts/: benchmark_analysis.py  generate_backlog.py  run_research.sh  security_check.py  value_discovery.py
scripts/automation/: README.md  collect_metrics.py  dependency_manager.py  repository_maintenance.py
src/: adaptive_learning.rs  adaptive_meta_learning.rs  benchmark.rs  cache.rs  compliance.rs  concurrent.rs  deployment.rs  diagnostics.rs  hardware_acceleration.rs  i18n.rs  lib.rs  lib_minimal.rs  lib_old.rs  models.rs  multimodal.rs  optimization.rs  pretrained.rs  quantum_classical.rs  quantum_optimizer.rs  regions.rs  scaling.rs  security.rs  self_optimization.rs  validation.rs
src/adaptive/: complexity.rs  controller.rs  mod.rs  timestep.rs
src/audio/: features.rs  filters.rs  format.rs  mod.rs  processor.rs
src/core/: config.rs  lnn.rs  mod.rs  ode_solver.rs  result.rs  state.rs
src/edge/: mod.rs
src/realtime/: mod.rs  processor.rs  quality.rs  scheduler.rs
src/telemetry/: mod.rs
tests/: conftest.py  integration_test.rs  test_basic.py  test_basic_rust.rs  test_generation2.rs  test_generation3.rs
tests/fixtures/: README.md
tests/fixtures/audio/: samples.py
tests/fixtures/configs/: test_configs.py
tests/integration/: test_end_to_end.py
tests/performance/: benchmark_framework.py  test_benchmarks.py
tests/research/: test_basic_functionality.py  test_comparative_study.py  test_experimental_framework.py  test_multi_objective.py
validation_results/: validation_results_20250828_000844.json
