[package]
name = "liquid-audio-nets"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Schmidt <daniel@terragon.dev>"]
license = "MIT"
description = "Edge-efficient Liquid Neural Network models for always-on audio sensing"
homepage = "https://github.com/terragon-labs/liquid-audio-nets"
repository = "https://github.com/terragon-labs/liquid-audio-nets"
readme = "README.md"
keywords = ["machine-learning", "audio", "embedded", "neural-networks", "no-std"]
categories = ["embedded", "science", "algorithms"]
rust-version = "1.70"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
nalgebra = { version = "0.32", default-features = false, features = ["libm"] }
ndarray = { version = "0.15", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
libm = "0.2"

# Audio processing
rustfft = { version = "6.1", default-features = false }
realfft = { version = "3.3", default-features = false }

# Embedded support
cortex-m = { version = "0.7", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
panic-halt = { version = "0.2", optional = true }

# Python bindings
pyo3 = { version = "0.20", optional = true, features = ["extension-module"] }
numpy = { version = "0.25", optional = true }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[features]
default = ["std"]
std = ["nalgebra/std", "ndarray/std", "serde/std"]
embedded = ["cortex-m", "cortex-m-rt", "panic-halt"]
python = ["pyo3", "numpy", "std"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0

[profile.bench]
debug = true

[[bench]]
name = "lnn_inference"
harness = false

[[bench]]
name = "adaptive_timestep"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]